Form issues edit
Working on form

--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ Once first aid has been administered, and the animal is stable, consult a vet. <
 							<textarea type ="message" class="col-md-9 col-sm-9 col-xs-9" required></textarea>
 							<div class="clearfix"></div>
 						</div>
-						<input type="submit" value="send">
+						<a href="form/formpage.html" target="_blank"> <input type="submit" value="send"> </a>
 					</form>	
 				</div>	
 				<div class="col-md-6 col-sm-6 col-xs-12 contact-w3lsright">
