--- a/index.html
+++ b/index.html
@@ -534,25 +534,7 @@ Once first aid has been administered, and the animal is stable, consult a vet. <
 		  
 			<h3 class="heading"><strong>CONTACT US</h3> 
 				<div class="col-md-6 col-sm-6 agileinfo-contact-left">	
-					<h6>send us a mail!</h6>
-					<form action="form php/handler.php" class="form_w3layouts" method="post">
-						<div class="agileits-form-element">
-							<span class="col-md-3  col-sm-3 col-xs-3 label1">name</span>
-							<input type="text" class="col-md-9 col-sm-9 col-xs-9" name="name" required="">
-							<div class="clearfix"></div>
-						</div>
-						<div class="agileits-form-element">
-							<span class="col-md-3 col-sm-3 col-xs-3 label1">Email</span>
-							<input type="email" name="name" class="col-md-9 col-sm-9 col-xs-9 email" required="">
-							<div class="clearfix"></div>
-						</div>
-						<div class="agileits-form-element">
-							<span class="col-md-3 col-sm-3 col-xs-3  label1">Message</span>
-							<textarea type ="message" class="col-md-9 col-sm-9 col-xs-9" required></textarea>
-							<div class="clearfix"></div>
-						</div>
-						<a href="form/formpage.html" target="_blank"> <input type="submit" value="send"> </a>
-					</form>	
+					 <img src="images/pigeon.jpeg">
 				</div>	
 				<div class="col-md-6 col-sm-6 col-xs-12 contact-w3lsright">
 					<h6>get in touch</h6>
