contact us updated
contact us updated

--- a/index.html
+++ b/index.html
@@ -526,23 +526,27 @@ Once first aid has been administered, and the animal is stable, consult a vet. <
 			</div>	
 		</div>
 	</div>
-</div> -->
+</div> 
+<br>
+<br>
+<br>
 <!-- //testimonials -->	
 
 	<div id="contact" class="wthree-contact w3ls-section">
 		<div class="container">
 		  
 			<h3 class="heading"><strong>CONTACT US</h3> 
-				<div class="col-md-6 col-sm-6 agileinfo-contact-left">	
+			<!-- 	<div class="col-md-6 col-sm-6 agileinfo-contact-left">	
 					 <img src="images/pigeon.jpeg">
-				</div>	
-				<div class="col-md-6 col-sm-6 col-xs-12 contact-w3lsright">
-					<h6>get in touch</h6>
+				</div> -->	
+				<div class="col-md-12 col-sm-6 col-xs-12 contact-w3lsright">
+					<h6 style="text-align: center">get in touch</h6>
 					<div class="address-row">
 						<div class="col-xs-2 address-left">
 							<span class="glyphicon glyphicon-home" aria-hidden="true"></span>
 						</div>
-						<div class="col-xs-10 address-right">
+
+						<div class="col-xs-10 address-right" >
 							<h5>Visit Us</h5>
 							<p>Nai Saray , Budaun</p>
 						</div>
